Implement Not Found page with internationalization support and theme adjustments in AppHeader

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -121,5 +121,10 @@
         "generic": "An error occurred while verifying the key. Please try again."
       }
     }
+  },
+  "notFound": {
+    "title": "Configuration not found",
+    "description": "It looks like the requested fortune wheel does not exist or has expired.",
+    "back": "Return to home page"
   }
 }
