Add drag-and-drop functionality and reorder handle to slice management

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -95,7 +95,8 @@
     "shortcuts": {
       "enterHint": "Press Enter to add the next slice",
       "enterHintButton": "Got it"
-    }
+    },
+    "reorderHandle": "Drag slice {{index}} to reorder"
   },
   "spin": {
     "title": "Spin the wheel",
